# ai-architecture-advisor

./: .gitignore  CLAUDE.md  Dockerfile  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  SETUP.md  check_and_fix.py  data_README.md  debug_ci_environment.py  docker-compose.yml  docs_README.md  fix_type_errors.py  mypy.ini  push_to_github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  simple_test_runner.py  test_notebooks.py  validate.py  validate_yaml.py
.claude/commands/dp/: analyze.md  refactor.md
.github/scripts/: check_notebooks.py  ensure_directories.py  test_docker.py
.github/workflows/: ci.yml
ai-engine/: code_analyzer.py  pattern_knowledge.py  refactoring_templates.py  repo_analyzer.py
commands/: analyze.md  check.md  validate.md
docs/: ARCHITECTURE.md  pattern_decision_guide.md
learning-resources/examples/implementations/: __init__.py
learning-resources/examples/implementations/patterns/: __init__.py  adapter.py  builder.py  observer.py  repository.py  singleton.py
learning-resources/examples/tests/: conftest.py
learning-resources/examples/tests/test_patterns/: __init__.py  test_adapter.py  test_builder.py  test_command.py  test_decorator.py  test_factory.py  test_observer.py  test_repository.py  test_singleton.py  test_state.py  test_strategy.py
learning-resources/guides/: dp_commands_guide.md  extracted_pattern_knowledge.md
learning-resources/notebooks/: 03_observer_pattern.ipynb  04_strategy_pattern.ipynb  06_command_pattern.ipynb  07_repository_pattern.ipynb
notebooks/: 01_singleton_pattern.ipynb  02_factory_pattern.ipynb  05_decorator_pattern.ipynb  07_repository_pattern.ipynb  08_builder_pattern.ipynb  09_adapter_pattern.ipynb  10_state_pattern.ipynb
src/: __init__.py
src/patterns/: __init__.py  adapter.py  builder.py  command.py  decorator.py  factory.py  observer.py  pattern_knowledge.py  refactoring_templates.py  repository.py  singleton.py  state.py  strategy.py
tests/: __init__.py  conftest.py
tests/test_patterns/: __init__.py  test_adapter.py  test_builder.py  test_command.py  test_decorator.py  test_factory.py  test_observer.py  test_repository.py  test_singleton.py  test_state.py  test_strategy.py
